# a2a-converter

./: LICENSE  README.md  pyproject.toml
example_agent/: .env.example  a2a_agent_wrapper.py  agent.py  agent_executor.py  requirements.txt  results.txt  settings.yaml  task_handler.py
example_agent/tools/: reddit_fetcher.py  write_tool.py
example_agents/openai/: readme.md
example_agents/openai/cooking_agent/: __main__.py  agent.py
example_agents/openai/reddit_internship_agent/: config.py  requirements.txt
example_agents/openai/reddit_internship_agent/tools/: openai_parser.py
src/divy_a2a/: cli.py  config_schema.py
src/divy_a2a/templates/: settings_stub.yaml.j2
src/divy_a2a/templates/common/: agent_executor.py.j2  task_handler.py.j2
src/divy_a2a/templates/frameworks/openai/: a2a_agent_wrapper.py.j2
